# elitecorn

./: .dockerignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml
elite_corn/: __init__.py  _elite_corn.py
tests/: test_file.py  test_single_colum.py  test_single_row.py  test_squares.py
